<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/default_list_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.raiski.musicplayer.MusicPlayerActivity">


    <TextView
        android:id="@+id/song_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="42sp"
        tools:text="@string/text_view_song_name" />

    <TextView
        android:id="@+id/album_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        tools:text="@string/text_view_album_name" />

    <TextView
        android:id="@+id/artist_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        tools:text="@string/text_view_artist_name" />

    <Button
        android:id="@+id/artist_info_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_artist_info" />

    <Button
        android:id="@+id/explore_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_explore" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/button_previous_song"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="40dp"
            android:layout_toStartOf="@+id/button_play_pause"
            android:src="@drawable/previous_button" />

        <ImageView
            android:id="@+id/button_play_pause"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/play_arrow" />

        <ImageView
            android:id="@+id/button_next_song"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="40dp"
            android:layout_toEndOf="@id/button_play_pause"
            android:src="@drawable/next_button" />

    </RelativeLayout>

</LinearLayout>